--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="/weather-app/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Weather App</title>
 </head>
 <body class="day-bg">
@@ -29,6 +29,6 @@
         </div>
     </div>
     
-    <script src="/weather-app/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
